// Copyright 2021. The Tari Project
//
// Redistribution and use in source and binary forms, with or without modification, are permitted provided that the
// following conditions are met:
//
// 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following
// disclaimer.
//
// 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the
// following disclaimer in the documentation and/or other materials provided with the distribution.
//
// 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote
// products derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
// INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
// DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
// WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
// USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
syntax = "proto3";

package tari.dan.network;

import "common.proto";

message NetworkAnnounce {
  bytes identity = 1;
  repeated bytes addresses = 2;
  IdentitySignature identity_signature = 3;
}

message IdentitySignature {
  uint32 version = 1;
  tari.dan.common.Signature signature = 2;
  int64 updated_at = 3;
}

message GetPeersRequest {
  uint64 since = 1;
}

message GetPeersResponse {
  bytes identity = 1;
  repeated bytes addresses = 2;
  IdentitySignature identity_signature = 3;
}

message VNStateSyncRequest {
  // Specific shard ids
  repeated tari.dan.common.ShardId missing_shard_state_ids = 1;
}

message VNStateSyncResponse {
  tari.dan.common.SubstateState substate_state = 1;
}

message GetVnStateInventoryRequest {
  tari.dan.common.ShardId start_shard_id = 1;
  tari.dan.common.ShardId end_shard_id = 2;
}

message GetVnStateInventoryResponse {
  repeated tari.dan.common.ShardId inventory = 1;
}
